returning lisp in haskell

--- a/ramblings/lisp-in-haskell.html
+++ b/ramblings/lisp-in-haskell.html
@@ -12,9 +12,9 @@
 
     <title>defmacro - Writing A Lisp Interpreter In Haskell</title>
     <meta name="description" content="An article describing the experience of writing a Lisp interpreter in Haskell." />
-    <link rel="stylesheet" type="text/css" href="/web/20161118010028cs_/http://www.defmacro.org/stylesheets/main.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="/web/20161118010028cs_/http://www.defmacro.org/stylesheets/articles.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="/web/20161118010028cs_/http://www.defmacro.org/stylesheets/print.css" media="print" />
+    <link rel="stylesheet" type="text/css" href="/stylesheets/main.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="/stylesheets/articles.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="/stylesheets/print.css" media="print" />
     <link rel="alternate" type="application/rss+xml" title="defmacro.org" href="../rss/news.xml" />
     <link rel="home" href="../index.html" />
   </head>
@@ -28,9 +28,9 @@
 	      <div id="header-extra-3">
 		<div id="header-extra-4">
 		  <div id="header-extra-5">
-		    <a class="home" href="/web/20161118010028/http://www.defmacro.org/">Home - defmacro.org</a>
+		    <a class="home" href="http://www.defmacro.org/">Home - defmacro.org</a>
 		    <span id="title">Made with alien technology.</span>
-		    <div id="syndication"><a href="/web/20161118010028/http://www.defmacro.org/rss/news.xml" title="RSS Feed"><img src="/web/20161118010028im_/http://www.defmacro.org/images/xml.png" alt="RSS Feed" /></a></div>
+		    <div id="syndication"><a href="http://www.defmacro.org/rss/news.xml" title="RSS Feed"><img src="http://www.defmacro.org/images/xml.png" alt="RSS Feed" /></a></div>
 		  </div>
 		</div>
 	      </div>
