returning lisp in haskell

--- a/ramblings/lisp-in-haskell.html
+++ b/ramblings/lisp-in-haskell.html
@@ -751,23 +751,10 @@ runhaskell Setup.lhs build
       <p>Everything on this site is in public domain unless stated
       otherwise.<br/> Contact me with any questions or comments at <a
       href="mailto:coffeemug@gmail.com">coffeemug@gmail.com</a>.</p>
-      <img src="/web/20161118010028im_/http://www.defmacro.org/images/valid-xhtml11.png" alt="Valid XHTML 1.1" />
-      <img src="/web/20161118010028im_/http://www.defmacro.org/images/valid-css.png" alt="Valid CSS" />
-      <img src="/web/20161118010028im_/http://www.defmacro.org/images/valid-rss.png" alt="Valid RSS" />
+      <img src="/images/valid-xhtml11.png" alt="Valid XHTML 1.1" />
+      <img src="/images/valid-css.png" alt="Valid CSS" />
+      <img src="/images/valid-rss.png" alt="Valid RSS" />
     </div>
   </div>
 </body>
 </html>
-
-
-
-
-
-<!--
-     FILE ARCHIVED ON 1:00:28 Nov 18, 2016 AND RETRIEVED FROM THE
-     INTERNET ARCHIVE ON 6:08:36 Dec 20, 2016.
-     JAVASCRIPT APPENDED BY WAYBACK MACHINE, COPYRIGHT INTERNET ARCHIVE.
-
-     ALL OTHER CONTENT MAY ALSO BE PROTECTED BY COPYRIGHT (17 U.S.C.
-     SECTION 108(a)(3)).
--->
